--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
 
     <title>Zomato Landing Page Clone </title>
   </head>
- <body></body>
+ <body>
+  <!-- zomato landing page -->
+ </body>
 </html>
