--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     rel="stylesheet" />
 
   <!-- Importing styles.css -->
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/style1.css" />
 
   <title>Zomato Landing Page Clone </title>
 </head>
