media queries not completed need to add more

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
   <!-- order online and dinning section -->
   <section id="placeOrder">
     <div class="orderOnline">
-      <!-- <img id="orderonline_image" src="images/item1.png" alt="No image found"> -->
+      <img id="orderonline_image" src="images/item1.png" alt="No image found">
       <div class="orderOnlineText">
         <h3 class="heading_orderOnline">Order Online</h3>
         <p class="para_orderOnline">Stay home and order to your doorstep</p>
       </div>
     </div>
     <div class="dining">
-      <!-- <img src="images/item2.png" alt="No image found"> -->
+      <img src="images/item2.png" alt="No image found">
       <div class="diningText">
         <h2 class="heading_dining">Dining</h2>
         <p class="para_dining">View the city's favourite during venues</p>
