Media queries added successfully

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="#">Add restaurant</a>
         <a href="#">Log in</a>
         <a href="#">Sign up</a>
-        <a href="#"><i class="fa-solid fa-user"></i></a>
+        <a href="#"><i class="fa-solid fa-user" id="icon_user"></i></a>
       </div>
     </nav>
     <div id="zomato_banner">
@@ -76,7 +76,7 @@
     </div>
     <div id="para_collections">
       <p>Explore curated lists of top restaurants, cafes, pubs, and bars in Ambala, based on trends.</p>
-      <p><a href="#">Collections in Ambala</a></p>
+      <span><a href="#">Collections in Ambala</a></span>
     </div>
     <div id="collection_images">
       <div class="collectionimg1">
@@ -296,8 +296,10 @@
           <i class="fa-brands fa-facebook"></i>
           <i class="fa-brands fa-youtube"></i>
         </div>
-        <img src="images/appleStore.png" alt="no image found">
-        <img src="images/playStore.png" alt="no image found">
+        <div class="footer_section_socialmedia_images">
+          <img src="images/appleStore.png" alt="no image found">
+          <img src="images/playStore.png" alt="no image found">
+        </div>
       </div>
     </div>
     <div id="footer_section_3">
