PROJECT COMPLETED TODAY:-)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="#">Add restaurant</a>
         <a href="#">Log in</a>
         <a href="#">Sign up</a>
-        <a href="#"><i class="fa-solid fa-user" id="icon_user"></i></a>
+        <i class="fa-solid fa-user" id="icon_user"></i>
       </div>
     </nav>
     <div id="zomato_banner">
